vlib/v/checker/tests/lambda_expression_in_map.out
vlib/v/checker/tests/lambda_expression_in_map.vv:3:12: error: lambda expressions used in the builtin array methods require exactly 1 parameter
    1 | a := [4, 5]
    2 | dump(a.map(it))
    3 | dump(a.map(|| 5))
      |            ~~~~
    4 | dump(a.map(|x| 5 * x))
    5 | dump(a.map(|x| x))
vlib/v/checker/tests/lambda_expression_in_map.vv:3:8: error: dump expression can not be void
    1 | a := [4, 5]
    2 | dump(a.map(it))
    3 | dump(a.map(|| 5))
      |        ~~~~~~~~~
    4 | dump(a.map(|x| 5 * x))
    5 | dump(a.map(|x| x))
vlib/v/checker/tests/lambda_expression_in_map.vv:6:12: error: lambda expressions used in the builtin array methods require exactly 1 parameter
    4 | dump(a.map(|x| 5 * x))
    5 | dump(a.map(|x| x))
    6 | dump(a.map(|x, y| x))
      |            ~~~~~~~~
vlib/v/checker/tests/lambda_expression_in_map.vv:6:8: error: dump expression can not be void
    4 | dump(a.map(|x| 5 * x))
    5 | dump(a.map(|x| x))
    6 | dump(a.map(|x, y| x))
      |        ~~~~~~~~~~~~~
